--- a/index.html
+++ b/index.html
@@ -3,20 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fast & Furious - Netflix</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#ff1">Vingadores e Tóquio</a></li>
-                <li><a href="#ff2">Fast & Furious: Vingadores II</a></li>
-                <li><a href="#ff3">Vingadores Unos bruxa5
+     <header>
+        <h1>Fast & Furious</h1>
+        <p>Entre na velocidade máxima!</p>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#ff1">Vingadores e Tóquio (2001)</a></li>
+            <li><a href="#ff2">Fast & Furious 2 - Vingadores II (2003)</a></li>
+            <li><a href="#ff3">Fast & Furious 7 (2015)</a></li>
+            <li><a href="#ff4">Vingadores: O Império dos Vingadores (2013)</a></li>
+        </ul>
+    </nav>
+
+    <section id="ff1">
+        <h2>Vingadores e Tóquio (2001)</h2>
+        <p><strong>Sinopse:</strong> Dominic Toretto (Vin Diesel) se junta aos amigos em uma corrida em Tóquio, enquanto os novos desafios surgem no mundo das corridas ilegais.</p>
+        <p><strong>Assista agora:</strong> <a href="https://www.netflix.com" target="_blank">Assistir no Netflix</a></p>
+    </section>
+
+    <section id="ff2">
+        <h2>Fast & Furious 2 - Vingadores II (2003)</h2>
+        <p><strong>Sinopse:</strong> Brian O'Conner (Paul Walker) se junta novamente a Toretto para resolver um caso envolvendo corrupção e traficantes de carros.</p>
+        <p><strong>Assista agora:</strong> <a href="https://www.netflix.com" target="_blank">Assistir no Netflix</a></p>
+    </section>
+
+    <section id="ff3">
+        <h2>Fast & Furious 7 (2015)</h2>
+        <p><strong>Sinopse:</strong> Após a morte de um dos membros da equipe, o grupo se junta para uma última missão. Uma mistura de ação e emoção pela perda de um amigo.</p>
+        <p><strong>Assista agora:</strong> <a href="https://www.netflix.com" target="_blank">Assistir no Netflix</a></p>
+    </section>
+
+    <section id="ff4">
+        <h2>Vingadores: O Império dos Vingadores (2013)</h2>
+        <p><strong>Sinopse:</strong> A guerra começa para a equipe. Toretto e seus aliados enfrentam uma missão impossível e lutam contra ameaças que podem destruir suas vidas.</p>
+        <p><strong>Assista agora:</strong> <a href="https://www.netflix.com" target="_blank">Assistir no Netflix</a></p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Fast & Furious Fan Page. Todos os direitos reservados.</p>
+    </footer>
     
 </body>
 </html>
